Spinner on loading

--- a/src/components/AppWrapper/AppWrapper.scss
+++ b/src/components/AppWrapper/AppWrapper.scss
@@ -2,3 +2,10 @@
     width: 100%;
     height: 100%;
 }
+
+.spinner__container {
+	height: 100vh;
+    display: flex;
+    justify-content: center;
+    margin-top: 70px;
+}
