--- a/src/components/CatCard/CatCard.scss
+++ b/src/components/CatCard/CatCard.scss
@@ -2,25 +2,27 @@
     position: relative;
     width: 200px;
     height: 200px;
-	margin-bottom: 30px;
-    // margin: 0 34px 34px 0;
+    margin-bottom: 30px;
 
-    img {
+    &__image {
         height: 100%;
         width: 100%;
-        &:hover {
-			transform:scale(1.1);
-            box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.24),
-                0px 9px 18px rgba(0, 0, 0, 0.18);
-        }
     }
 
-    &__button {
-        width: 40px;
-        height: 40px;
+    &__like-button {
+        display: none;
         position: absolute;
-        color: #f24e1e;
-        right: 28px;
-        bottom: 28px;
+        right: 16px;
+        bottom: 16px;
+    }
+
+    &:hover {
+        transform: scale(1.1);
+        box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.24),
+            0px 9px 18px rgba(0, 0, 0, 0.18);
+    }
+
+    &:hover img {
+        display: block;
     }
 }
