--- a/src/components/CatCard/CatCard.scss
+++ b/src/components/CatCard/CatCard.scss
@@ -2,7 +2,7 @@
     position: relative;
     width: 200px;
     height: 200px;
-    margin-bottom: 30px;
+    margin: 0 30px 30px 0;
 
     &__image {
         height: 100%;
