--- a/src/index.scss
+++ b/src/index.scss
@@ -20,7 +20,7 @@ body {
     font-weight: normal;
     line-height: 2.1rem;
     color: #000;
-    background-color: #f3f3f3;
+    background-color: #e5e5e5;
 }
 
 #root {
