--- a/src/containers/AppWrapper/AppWrapper.scss
+++ b/src/containers/AppWrapper/AppWrapper.scss
@@ -4,8 +4,8 @@
 }
 
 .spinner__container {
-	height: 100vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
-    margin-top: 70px;
+    align-items: center;
 }
