--- a/src/components/CatCard/CatCard.scss
+++ b/src/components/CatCard/CatCard.scss
@@ -2,7 +2,13 @@
     position: relative;
     width: 200px;
     height: 200px;
-    margin: 0 30px 30px 0;
+    margin: 0 25px 30px auto;
+    justify-content: center;
+    align-items: center;
+
+    @media screen and (max-width: 583px) {
+        margin-left: 0;
+    }
 
     &__image {
         height: 100%;
