--- a/src/components/CatCard/CatCard.scss
+++ b/src/components/CatCard/CatCard.scss
@@ -2,13 +2,10 @@
     position: relative;
     width: 200px;
     height: 200px;
-    margin: 0 25px 30px auto;
-    justify-content: center;
+    margin: 0 10px 30px 10px;
+    display: flex;
+    justify-content: flex-start;
     align-items: center;
-
-    @media screen and (max-width: 583px) {
-        margin-left: 0;
-    }
 
     &__image {
         height: 100%;
