--- a/src/containers/MainContent/MainContent.scss
+++ b/src/containers/MainContent/MainContent.scss
@@ -2,7 +2,7 @@
     position: absolute;
     top: 64px;
     width: 100%;
-    height: 100%;
+    height: auto;
     padding: 0 52px;
-	margin: auto;
+    margin: auto;
 }
