--- a/src/components/CatCard/CatCard.scss
+++ b/src/components/CatCard/CatCard.scss
@@ -2,10 +2,7 @@
     position: relative;
     width: 200px;
     height: 200px;
-    margin: 0 10px 30px 10px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    margin: 10px;
 
     &__image {
         height: 100%;
