--- a/src/containers/CardsContainer/CardsContainer.scss
+++ b/src/containers/CardsContainer/CardsContainer.scss
@@ -2,8 +2,7 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    align-content: flex-start;
-    padding: 40px 10px 0 10px;
+    padding: 40px 10px 20px 10px;
 
     @media screen and (max-width: 783px) {
         justify-content: center;
