--- a/src/components/CardsContainer/CardsContainer.scss
+++ b/src/components/CardsContainer/CardsContainer.scss
@@ -1,10 +1,16 @@
 .cards__container {
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
     padding: 40px 10px 20px 10px;
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: repeat(auto-fill, 200px);
+    gap: 10px;
 
-    @media screen and (max-width: 783px) {
-        justify-content: center;
+    @media screen and (max-width: 763px) {
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+    }
+    @media screen and (max-width: 591px) {
+        grid-template-columns: 1fr;
     }
 }
